1、更新了dinbing相关代码及RREDME使用

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,39 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="color_ffffff">#ffffff</color>
+    <color name="color_1A1A1A">#1A1A1A</color>
+    <color name="color_171717">#171717</color>
+    <color name="color_555555">#555555</color>
+    <color name="color_0078A3">#0078A3</color>
+    <color name="color_00AEED">#00AEED</color>
+    <color name="color_8E8E8E">#8E8E8E</color>
+    <color name="color_3E3E3E">#3E3E3E</color>
+    <color name="color_202020">#202020</color>
+    <color name="color_EE3F0B">#EE3F0B</color>
+    <color name="color_2C2C2C">#2C2C2C</color>
+    <color name="color_262626">#262626</color>
+    <color name="color_2B2B2B">#2B2B2B</color>
+    <color name="color_1C1C1C">#1C1C1C</color>
+    <color name="color_000000">#000000</color>
+    <color name="color_999999">#999999</color>
+    <color name="color_DDDDDD">#DDDDDD</color>
+    <color name="color_F2F2F2">#F2F2F2</color>
+    <color name="color_008adb">#008adb</color>
+    <color name="color_333333">#333333</color>
+    <color name="color_009FD9">#009FD9</color>
+    <color name="color_A2A9B4">#A2A9B4</color>
+    <color name="color_FFF5E5">#FFF5E5</color>
+    <color name="color_FF9900">#FF9900</color>
+    <color name="color_FF0000">#FF0000</color>
+    <color name="color_FFE5E5">#FFE5E5</color>
+    <color name="color_008ADB">#008ADB</color>
+    <color name="color_CCCCCC">#CCCCCC</color>
+    <color name="color_F9F9F9">#F9F9F9</color>
+    <color name="color_666666">#666666</color>
+    <color name="color_72C4EB">#72C4EB</color>
+    <color name="color_e9ecf3">#e9ecf3</color>
+    <color name="color_eeeeee">#eeeeee</color>
+    <color name="color_DFDFDF">#DFDFDF</color>
 </resources>
