--- a/RxTools/src/main/res/layout/activity_crash.xml
+++ b/RxTools/src/main/res/layout/activity_crash.xml
@@ -13,7 +13,7 @@
         android:id="@+id/rx_crash_tool"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:background="?colorPrimary"
+        android:background="#03A9F4"
         android:gravity="center"
         android:text="RxCrashTool"
         android:textColor="#ffffff"
@@ -39,11 +39,10 @@
 
         <Button
             android:id="@+id/crash_error_activity_more_info_button"
-            style="?borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/crash_error_details"
-            android:textColor="?colorPrimary" />
+            android:textColor="#03A9F4" />
 
 
         <TextView
@@ -59,7 +58,6 @@
 
         <TextView
             android:id="@+id/crash_error_locate_more_info_button"
-            style="?borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -67,7 +65,7 @@
             android:background="@drawable/shape_round_black_tr_15dp"
             android:padding="10dp"
             android:text="@string/crash_error_file"
-            android:textColor="?colorPrimary" />
+            android:textColor="#03A9F4" />
 
     </LinearLayout>
 
